--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "predeploy": "npm run build",     
-    "deploy": "gh-pages -d dist"     
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
     "@types/papaparse": "^5.5.2",
@@ -17,6 +17,7 @@
     "vite": "^7.2.4"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.6.1",
     "papaparse": "^5.5.3",
     "phaser": "^3.90.0",
     "tone": "^15.1.22"
